--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prod": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "vg": "nodemon app_vg.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +21,13 @@
   },
   "homepage": "https://github.com/ITS-SBT-2025/giulia_pasqualini#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10"
   }
 }
