Update es prof e correzioni varie

--- a/Es/.env
+++ b/Es/.env
@@ -1,6 +1,7 @@
 PORT=3000
 NODE_ENV=development
-MSSQL_HOST=localhost
-MSSQL_NAME=Es
-MSSQL_USER=sa
-MSSQL_PASSWORD=123456
+MSSQL_HOST=localhost\SQLEXPRESS
+MSSQL_PORT=1433
+MSSQL_NAME=Corso_its
+MSSQL_USERNAME=sa
+MSSQL_PASSWORD=P3rryL0rn1t0r1nc0
